Sonidos, pantalla finalizacion partida funcional

--- a/android/assets/locale/locale.properties
+++ b/android/assets/locale/locale.properties
@@ -5,3 +5,11 @@ volumen=Volumen
 vibrar=Vibrar
 ayuda=Ayuda
 cambioPersonaje=Cambio
+creado=Creado por
+musica=Musica de
+jug1Gana=El ganador es el jugador 1
+jug2Gana=El ganador es el jugador 2
+reiniciar=Reiniciar
+volverMenu=Volver al Menu
+tiempoPartida=Tiempo Partida
+balas=Balas utilizadas
