--- a/android/assets/locale/locale_en.properties
+++ b/android/assets/locale/locale_en.properties
@@ -5,3 +5,11 @@ volumen=Volume
 vibrar=Vibration
 ayuda=Help
 cambioPersonaje=Change
+creado=Created by
+musica=Music from
+jug1Gana=The winner is the player 1
+jug2Gana=The winner is the player 2
+reiniciar=Reset
+volverMenu=Back to Menu
+tiempoPartida=Game Time
+balas=Used bullets
