--- a/android/assets/locale/locale.properties
+++ b/android/assets/locale/locale.properties
@@ -13,3 +13,9 @@ reiniciar=Reiniciar
 volverMenu=Volver al Menu
 tiempoPartida=Tiempo Partida
 balas=Balas utilizadas
+vida=Vida
+velocidadPer=Velocidad
+alcance=Alcance
+balasTotales=Balas
+daño=Potencia
+jugador=Jugador
