--- a/android/assets/locale/locale_en.properties
+++ b/android/assets/locale/locale_en.properties
@@ -13,3 +13,9 @@ reiniciar=Reset
 volverMenu=Back to Menu
 tiempoPartida=Game Time
 balas=Used bullets
+vida=Health
+velocidadPer=Speed
+alcance=Scope
+balasTotales=Bullets
+daño=Hurt
+jugador=Player
