Añadir nuevo personaje, mapa, arreglar angulo hacia atras, añadir pantalla de records (aun no guarda)

--- a/android/assets/locale/locale.properties
+++ b/android/assets/locale/locale.properties
@@ -12,6 +12,7 @@ jug2Gana=El ganador es el jugador 2
 reiniciar=Reiniciar
 volverMenu=Volver al Menu
 tiempoPartida=Tiempo Partida
+tiempo=Tiempo
 balas=Balas utilizadas
 vida=Vida
 velocidadPer=Velocidad
@@ -22,3 +23,12 @@ jugador=Jugador
 continuar=Continuar
 atras=Anterior
 balasRestantes=Balas
+mapa=Mapa
+arma=Arma
+nieve=Nieve
+tierra=Tierra
+dino=Dino
+dog=Perro
+uzi=Uzi
+gun=Pistola
+bomba=Bomba
