--- a/android/assets/locale/locale_en.properties
+++ b/android/assets/locale/locale_en.properties
@@ -12,6 +12,7 @@ jug2Gana=The winner is the player 2
 reiniciar=Reset
 volverMenu=Back to Menu
 tiempoPartida=Game Time
+tiempo=Time
 balas=Used bullets
 vida=Health
 velocidadPer=Speed
@@ -22,3 +23,12 @@ jugador=Player
 continuar=Continue
 atras=Back
 balasRestantes=Bullets
+mapa=Map
+arma=Gun
+nieve=Snow
+tierra=Dirt
+dino=Dino
+dog=Dog
+uzi=Uzi
+gun=Gun
+bomba=Bomb
