Guarda record, notificaciones, sensor de luz muestras limites, opcion borrar datos, pantalla de records con scroll, pausa del juego

--- a/android/assets/locale/locale.properties
+++ b/android/assets/locale/locale.properties
@@ -32,3 +32,10 @@ dog=Perro
 uzi=Uzi
 gun=Pistola
 bomba=Bomba
+desarrollo=Limites
+tiempoTotal=Tiempo total
+partidas=Partidas
+borrar=Borrar Datos
+estasSeguro=Estas seguro?
+si=Si
+no=No
