--- a/android/assets/locale/locale_en.properties
+++ b/android/assets/locale/locale_en.properties
@@ -32,3 +32,10 @@ dog=Dog
 uzi=Uzi
 gun=Gun
 bomba=Bomb
+desarrollo=Limits
+tiempoTotal=Total time
+partidas=Matches
+borrar=Delete Data
+estasSeguro=Are you sure?
+si=Yes
+no=No
