--- a/android/assets/locale/locale_en.properties
+++ b/android/assets/locale/locale_en.properties
@@ -30,8 +30,10 @@ tierra=Dirt
 dino=Dino
 dog=Dog
 uzi=Uzi
+shootgun=Uzi
 gun=Gun
 bomba=Bomb
+canon=Bomb
 desarrollo=Limits
 tiempoTotal=Total time
 partidas=Matches
@@ -39,3 +41,12 @@ borrar=Delete Data
 estasSeguro=Are you sure?
 si=Yes
 no=No
+redesSociales=I'm playing Pelea de Gallos, download it now
+tuto1 = Here you have all the options to play
+tuto2 = Each player selects character and weapon \nEach one of them has some characteristics
+tuto3 = Next you select the map where you are going to play
+tuto4 = At ​​the top you have information about the game, life,\nbullets and remaining time, with finger fling \nyou change the firing angle
+tuto5 = If you run out of bullets you can change the turn \nor run to hide and avoid being shot
+tuto6 = As soon as the game is over, the game's data is shown \nThe game will be saved to see the statistics later \nIf you restart a new game with the same configuration as the previous one
+tuto7 = In the settings menu option you can change the settings \nnDelete the statistics, if you activate the limits, when you cover the \nsensor of light the limits of the characters will be shown
+tuto8 = Finally in the records screen all \nstatistics will appear and you can slide with your finger to see more records
