--- a/android/assets/locale/locale.properties
+++ b/android/assets/locale/locale.properties
@@ -30,8 +30,10 @@ tierra=Tierra
 dino=Dino
 dog=Perro
 uzi=Uzi
+shootgun=Uzi
 gun=Pistola
 bomba=Bomba
+canon=Bomba
 desarrollo=Limites
 tiempoTotal=Tiempo total
 partidas=Partidas
@@ -39,3 +41,12 @@ borrar=Borrar Datos
 estasSeguro=Estas seguro?
 si=Si
 no=No
+redesSociales=Estoy jugando a Pelea de Gallos, descargalo ya
+tuto1=Aqui dispones de todas las opciones para poder jugar
+tuto2=Cada jugador selecciona personaje y arma\nCada uno de ellos tiene unas caracteristicas
+tuto3=Despues seleccionas el mapa en el que vais a jugar
+tuto4=En la parte superior tienes informacion sobre la partida, vida,\nbalas y tiempo restante, con el desplazamiento del dedo\npor la pantalla se cambia el angulo de disparo
+tuto5=Si te quedas sin balas puedes cambiar el turno\no correr a esconderte y asi evitar que te disparen
+tuto6=En cuanto se acabe la partida se muestran datos de la misma\nSe guardara la partida para ver las estadisticas mas tarde\nSi reinicias de iniciara una nueva partida con la misma configuracion de la anterior
+tuto7=En la opcion de menu de ajustes puedes cambiar la configuracion\nBorrar las estadistica, si activas los limites, al tapar el\nsensor de luz se mostraran los limites de los personajes
+tuto8=Por ultimo en la pantalla de records apareceran todas las\nestadisticas y podras deslzar con el dedo para ver mas partidas
