Añadir power ups en forma de cajas y avisa con toast del tipo

--- a/android/assets/locale/locale.properties
+++ b/android/assets/locale/locale.properties
@@ -29,11 +29,9 @@ nieve=Nieve
 tierra=Tierra
 dino=Dino
 dog=Perro
-uzi=Uzi
 shotgun=Uzi
 gun=Pistola
 bomba=Bomba
-canon=Bomba
 desarrollo=Limites
 tiempoTotal=Tiempo total
 partidas=Partidas
@@ -50,3 +48,9 @@ tuto5=Si te quedas sin balas puedes cambiar el turno\no correr a esconderte y as
 tuto6=En cuanto se acabe la partida se muestran datos de la misma\nSe guardara la partida para ver las estadisticas mas tarde\nSi reinicias de iniciara una nueva partida con la misma configuracion de la anterior
 tuto7=En la opcion de menu de ajustes puedes cambiar la configuracion\nBorrar las estadistica, si activas los limites, al tapar el\nsensor de luz se mostraran los limites de los personajes
 tuto8=Por ultimo en la pantalla de records apareceran todas las\nestadisticas y podras deslzar con el dedo para ver mas partidas
+quitaVida=Pierdes 10 de vida
+sumaVida=Ganas 10 de vida
+pierdeTurno=Pierdes el turno
+rivalquitaVida=Tu rival pierde 10 de vida
+rivalSumaVida=Tu rival gana 10 de vida
+dobleBalas=Tienes el doble de balas
