--- a/android/assets/locale/locale_en.properties
+++ b/android/assets/locale/locale_en.properties
@@ -33,7 +33,6 @@ uzi=Uzi
 shotgun=Uzi
 gun=Gun
 bomba=Bomb
-canon=Bomb
 desarrollo=Limits
 tiempoTotal=Total time
 partidas=Matches
@@ -49,4 +48,10 @@ tuto4 = At ​​the top you have information about the game, life,\nbullets and
 tuto5 = If you run out of bullets you can change the turn \nor run to hide and avoid being shot
 tuto6 = As soon as the game is over, the game's data is shown \nThe game will be saved to see the statistics later \nIf you restart a new game with the same configuration as the previous one
 tuto7 = In the settings menu option you can change the settings \nnDelete the statistics, if you activate the limits, when you cover the \nsensor of light the limits of the characters will be shown
-tuto8 = Finally in the records screen all \nstatistics will appear and you can slide with your finger to see more records
+tuto8 = Finally in the records screen all statistics will appear\nand you can slide with your finger to see more records
+quitaVida=You lose 10 of life
+sumaVida=You win 10 of life
+pierdeTurno=Pierdes el turno
+rivalquitaVida=Your rival loses 10 of life
+rivalSumaVida=Your rival win 10 of life
+dobleBalas=Double bullets
